Commits after initial IntelliJ code analysis.  Updated Readme file.